@@ -1,0 +1,14 @@
+calc_axo_{{ o.model.value }}_i: entity work.axol1tl_{{ o.model.value }}_instance
+    port map(
+        lhc_clk,
+        bx_data.mu({{ o.bx_arr }}),
+        bx_data.eg({{ o.bx_arr }}),
+        bx_data.jet({{ o.bx_arr }}),
+        bx_data.tau({{ o.bx_arr }}),
+        bx_data.ett({{ o.bx_arr }}),
+        bx_data.htt({{ o.bx_arr }}),
+        bx_data.etm({{ o.bx_arr }}),
+        bx_data.htm({{ o.bx_arr }}),
+        bx_data.etmhf({{ o.bx_arr }}),
+        axol1tl_{{ o.model.value }}_score
+    );
